[package]
name = "tinkoffApi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/KM8Oz/tinkoffpay-rs.git"
license-file = "LICENSE"
description = "Simple tinkoff integration (the seller receives a link to the payment form and redirect the buyer to it); NB: with callback method"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
readme = "README.md"
[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }