[package]
name = "tinkoffpay"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/KM8Oz/tinkoffpay-rs.git"
license-file = "LICENSE.md"
keywords = ["tinkoff", "acquiring", "api", "bank", "opensource"]
description = "Simple tinkoff integration (the seller receives a link to the payment form and redirect the buyer to it); NB: with callback method"
readme = "README.md"

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]
[dependencies.serde]
version = "1.0"
features = ["derive"]
[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]
[dependencies.hyper]
version = "0.14"
features = ["full"]
[dependencies.hyper-tls]
version = "0.5.0"
[dependencies.tokio]
version = "1"
features = ["full"]